--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,16 @@
 CMAKE_MINIMUM_REQUIRED(VERSION 3.22)
 PROJECT(Boar VERSION 0.0.1)
 
+# CPP Version
 SET(CMAKE_CXX_STANDARD 17)
 
+# directories
 SET(SRC_DIR src)
+SET(TEST_DIR test)
 
+# include
 SET(INC_DIR ./include)
-
 INCLUDE_DIRECTORIES(${INC_DIR})
 
+# src
 ADD_SUBDIRECTORY(${SRC_DIR}/boar)
