--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,4 @@ INCLUDE_DIRECTORIES(${INC_DIR})
 ADD_SUBDIRECTORY(${SRC_DIR}/boar)
 
 # test
-ADD_SUBDIRECTORY(${TEST_DIR}/test01)
+ADD_SUBDIRECTORY(${TEST_DIR}/Lexer)
